cmake_minimum_required(VERSION 3.17)
project(platform-game)
set(CMAKE_CXX_STANDARD 17)
find_package(SFML 2.6.1 COMPONENTS graphics system window audio network)
set(SOURCE_FILES main.cpp)
add_executable(platform-game ${SOURCE_FILES})
target_link_libraries(platform-game sfml-system sfml-window sfml-graphics sfml-audio sfml-network)